# task-108

./: .gitignore  README.md  run_test.sh  setup.py
src/parser/: parserTools.py
task_solution/: .gitignore  run_test.sh
task_solution/parser/: CMakeLists.txt  parserTools.py
task_solution/proto/: CMakeLists.txt
task_solution/tests/: test_DelimitedMessagesStreamParser.py  test_parse_delimited.py
tests/: test_DelimitedMessagesStreamParser.py  test_parse_delimited.py
